# lambda

./: README.md
blog/: README.md
events-a/src/: main.rs
https-a/: Cargo.toml
https-a/src/: main.rs
python/: README.md
python/data/: pyproject.toml
python/data/src/data/: __about__.py
python/datum/: LICENSE.txt  README.md  pyproject.toml
python/datum/src/datum/: __init__.py
python/events-a/: README.md  datum  events_a.py  package.py  pyproject.toml
python/events-a/src/: data
python/events-a/src/events_a/: __about__.py  __init__.py
python/events-b/: events_b.py  package.py  pylintrc  pyproject.toml
rust/: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml  rustfmt.toml  taplo.toml
rust/data/: Cargo.toml
rust/data/src/: lib.rs
rust/dbimporter/: Cargo.toml
rust/dbimporter/src/: main.rs
rust/events-a/: Cargo.toml
rust/events-a-rs/src/: main.rs
rust/events-a/src/: main.rs
rust/events-b/: Cargo.toml
rust/events-b-rs/: Cargo.toml
rust/events-b-rs/src/: main.rs
rust/events-b/src/: main.rs
rust/https-a/: Cargo.toml
rust/https-a-rs/: Cargo.toml
rust/https-a-rs/src/: main.rs
rust/https-a/src/: main.rs
scala/: .scalafmt.conf  README.md  build.sbt
scala/common/src/main/scala/com/xebia/lambda/: Datum.scala  Kinesis.scala  Logger.scala
scala/data/src/main/scala/com/xebia/lambda/: Datum.scala  Kinesis.scala
scala/data/src/test/scala/com/xebia/lambda/: DatumSuite.scala
scala/events-a/src/main/scala/com/xebia/lambda/eventsA/: EventsAApp.scala
scala/events-b/src/main/scala/com/xebia/lambda/eventsB/: EventsBApp.scala
scala/http-a/src/main/scala/com/xebia/lambda/httpA/: Datum.scala  HttpAApp.scala
scala/project/: plugins.sbt
typescript/: .gitignore  README.md  tsconfig.json
typescript/data/: package-lock.json  package.json
typescript/data/src/: data.ts
typescript/events-a/: package-lock.json  package.json
typescript/events-a/src/: index.ts
typescript/events-b/: package-lock.json  package.json
typescript/events-b/src/: index.ts
