[workspace]
resolver = "2"
members = ["https-a", "events-a", "events-b"]
default-members = ["https-a", "events-a", "events-b"]
exclude = []

[profile.release]
opt-level = 2 # fast and small
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[workspace.package]
authors = ["Paul LaCrosse <paul.lacrosse@xebia.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws_lambda_events = { version = "0.13", default-features = false, features = [
  "kinesis",
] }
aws-sdk-dynamodb = "1.9"
lambda_http = "0.9"
lambda_runtime = "0.9"
rand = "0.8"
sha3 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }

# anyhow = "1.0.75"
# serde_json = "1.0.107"
# serde = { version = "1.0.193", default-features = false, features = ["derive"] }

[patch.crates-io]
