[workspace]
resolver = "2"
members = ["data", "stockpriceitem", "https-a", "events-a", "events-b"]
default-members = ["stockpriceitem", "https-a", "events-a", "events-b"]
exclude = []

# [profile.release]
# opt-level = 2 # fast and small
# lto = true

# Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2

[workspace.package]
authors = [
  "Paul LaCrosse <paul.lacrosse@xebia.com>",
  "Todd L Smith <todd.smith@xebia.com",
]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws_lambda_events = { version = "0.13", default-features = false, features = [
  "kinesis",
] }
aws-sdk-dynamodb = "1.9"
aws-sdk-kinesis = "1.9"
base64 = "0.21"
data = { path = "./data" }
dotenv = "0.15.0"
lambda_http = "0.9"
lambda_runtime = "0.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+0_33"] }
serde_json = "1.0"
sha3 = "0.10"
simple-error = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }
uuid = { version = "1.6", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde",
] }

[patch.crates-io]
