[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datum"
dynamic = ["version"]
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = []
authors = [{ name = "Todd L Smith", email = "todd.smith@xebia.com" }]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.hatch.version]
path = "src/datum/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
lint = "pylint {args:src/datum tests}"
check = "mypy --install-types --non-interactive {args:src/datum tests}"
