[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "events-a"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = []
authors = [{ name = "Todd L Smith", email = "todd.smith@xebia.com" }]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
	"boto3 == 1.34.25",
	"botocore == 1.34.25",
	"data @ {root:uri}/../data/dist/data-1.0.0-py3-none-any.whl",
]

[tool.hatch.version]
path = "src/events_a/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
lint = "pylint {args:src/events_a tests}"
check = "mypy --install-types --non-interactive {args:src/events_a tests}"

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source_pkgs = ["events_a", "tests"]
branch = true
parallel = true
omit = ["src/events_a/__about__.py"]

[tool.coverage.paths]
events_a = ["src/events_a", "*/events-a/src/events_a"]
tests = ["tests", "*/events-a/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
