[package]
name = "events-a"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
aws-config.workspace = true
aws_lambda_events.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-kinesis.workspace = true
base64.workspace = true
data.workspace = true
lambda_runtime.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
