[package]
name = "https-a-rs"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[package.metadata.lambda.deploy]
memory = 2048
timeout = 60
# tracing = "active"             # Tracing mode
# role = "role-full-arn"         # Function's execution role
# env_file = ".env.production"   # File to load environment variables from
# env = { "VAR1" = "VAL1" }      # Additional environment variables
# layers = [                     # List of layers to deploy with your function
#     "layer-full-arn"
# ]
# tags = { "team" = "lambda" }   # List of AWS resource tags for this function

[dependencies]
data.workspace = true

aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-kinesis.workspace = true
dotenv.workspace = true
lambda_http.workspace = true
lambda_runtime.workspace = true
rand.workspace = true
serde.workspace = true
serde_dynamo.workspace = true
serde_json.workspace = true
sha3.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
