[package]
name = "https-a"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
lambda_http.workspace = true
lambda_runtime.workspace = true
rand.workspace = true
sha3.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
